@@ -2,6 +2,9 @@ Changes for Filter Effects specification
 ----------------------------------------
 
 2013-07-04  Dirk Schulze  <dschulze@adobe.com>
+- Add child selector as property value to filter property.
+
+2013-07-04  Dirk Schulze  <dschulze@adobe.com>
 - Dimension and origin of passed image to filter() CSS Image function must be preserved.
 
 2013-06-12  Dirk Schulze  <dschulze@adobe.com>
